parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AFN
    CHUMNONE
    COMA
    COMENTARIO
    COMENTARIO_MULTILINEA
    DEUMAN
    FEYWAJ
    INCHE
    KAM
    KAY
    KENUN
    KOM
    KONME
    KUDAW
    LLITULUN
    MEW
    NAMEMN
    NGUEN
    NON
    NV
    PEPILTUN
    PETULN
    PONWI
    POTENCIA
    PVLE
    SHUNUL
    WATRON
    WELTEKUN
    WICHU
    YAFUNGUELTUN

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> pekenun_instr
Rule 5     instruccion -> asignacion_instr
Rule 6     instruccion -> tuntepu_instr
Rule 7     instruccion -> li_instr
Rule 8     instruccion -> if_else_instr
Rule 9     pekenun_instr -> PEKENUN PAREIZQ expresion_cadena PAREDER
Rule 10    asignacion_instr -> ID ASIGNACION expresion_numerica
Rule 11    tuntepu_instr -> TUNTEPU PAREIZQ expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER
Rule 12    li_instr -> LI PAREIZQ expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER
Rule 13    if_else_instr -> LI PAREIZQ expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER NVLI LLAVIZQ instrucciones LLAVDER
Rule 14    expresion_numerica -> expresion_numerica MAS expresion_numerica
Rule 15    expresion_numerica -> expresion_numerica MENOS expresion_numerica
Rule 16    expresion_numerica -> expresion_numerica POR expresion_numerica
Rule 17    expresion_numerica -> expresion_numerica DIVIDIDO expresion_numerica
Rule 18    expresion_numerica -> PAREIZQ expresion_numerica PAREDER
Rule 19    expresion_numerica -> ENTERO
Rule 20    expresion_numerica -> DECIMAL
Rule 21    expresion_numerica -> ID
Rule 22    expresion_cadena -> CADENA
Rule 23    expresion_cadena -> expresion_numerica
Rule 24    expresion_logica -> expresion_numerica MAYOR expresion_numerica
Rule 25    expresion_logica -> expresion_numerica MENOR expresion_numerica
Rule 26    expresion_logica -> expresion_numerica IGUALQUE expresion_numerica
Rule 27    expresion_logica -> expresion_numerica DISTINTO expresion_numerica

Terminals, with rules where they appear

AFN                  : 
ASIGNACION           : 10
CADENA               : 22
CHUMNONE             : 
COMA                 : 
COMENTARIO           : 
COMENTARIO_MULTILINEA : 
DECIMAL              : 20
DEUMAN               : 
DISTINTO             : 27
DIVIDIDO             : 17
ENTERO               : 19
FEYWAJ               : 
ID                   : 10 21
IGUALQUE             : 26
INCHE                : 
KAM                  : 
KAY                  : 
KENUN                : 
KOM                  : 
KONME                : 
KUDAW                : 
LI                   : 12 13
LLAVDER              : 11 12 13 13
LLAVIZQ              : 11 12 13 13
LLITULUN             : 
MAS                  : 14
MAYOR                : 24
MENOR                : 25
MENOS                : 15
MEW                  : 
NAMEMN               : 
NGUEN                : 
NON                  : 
NV                   : 
NVLI                 : 13
PAREDER              : 9 11 12 13 18
PAREIZQ              : 9 11 12 13 18
PEKENUN              : 9
PEPILTUN             : 
PETULN               : 
PONWI                : 
POR                  : 16
POTENCIA             : 
PVLE                 : 
SHUNUL               : 
TUNTEPU              : 11
WATRON               : 
WELTEKUN             : 
WICHU                : 
YAFUNGUELTUN         : 
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 5
expresion_cadena     : 9
expresion_logica     : 11 12 13
expresion_numerica   : 10 14 14 15 15 16 16 17 17 18 23 24 24 25 25 26 26 27 27
if_else_instr        : 8
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 11 12 13 13
li_instr             : 7
pekenun_instr        : 4
tuntepu_instr        : 6

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . pekenun_instr
    (5) instruccion -> . asignacion_instr
    (6) instruccion -> . tuntepu_instr
    (7) instruccion -> . li_instr
    (8) instruccion -> . if_else_instr
    (9) pekenun_instr -> . PEKENUN PAREIZQ expresion_cadena PAREDER
    (10) asignacion_instr -> . ID ASIGNACION expresion_numerica
    (11) tuntepu_instr -> . TUNTEPU PAREIZQ expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER
    (12) li_instr -> . LI PAREIZQ expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER
    (13) if_else_instr -> . LI PAREIZQ expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER NVLI LLAVIZQ instrucciones LLAVDER

    PEKENUN         shift and go to state 9
    ID              shift and go to state 10
    TUNTEPU         shift and go to state 11
    LI              shift and go to state 12

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    pekenun_instr                  shift and go to state 4
    asignacion_instr               shift and go to state 5
    tuntepu_instr                  shift and go to state 6
    li_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . pekenun_instr
    (5) instruccion -> . asignacion_instr
    (6) instruccion -> . tuntepu_instr
    (7) instruccion -> . li_instr
    (8) instruccion -> . if_else_instr
    (9) pekenun_instr -> . PEKENUN PAREIZQ expresion_cadena PAREDER
    (10) asignacion_instr -> . ID ASIGNACION expresion_numerica
    (11) tuntepu_instr -> . TUNTEPU PAREIZQ expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER
    (12) li_instr -> . LI PAREIZQ expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER
    (13) if_else_instr -> . LI PAREIZQ expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER NVLI LLAVIZQ instrucciones LLAVDER

    $end            reduce using rule 1 (init -> instrucciones .)
    PEKENUN         shift and go to state 9
    ID              shift and go to state 10
    TUNTEPU         shift and go to state 11
    LI              shift and go to state 12

    instruccion                    shift and go to state 13
    pekenun_instr                  shift and go to state 4
    asignacion_instr               shift and go to state 5
    tuntepu_instr                  shift and go to state 6
    li_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8

state 3

    (3) instrucciones -> instruccion .

    PEKENUN         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    TUNTEPU         reduce using rule 3 (instrucciones -> instruccion .)
    LI              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVDER         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> pekenun_instr .

    PEKENUN         reduce using rule 4 (instruccion -> pekenun_instr .)
    ID              reduce using rule 4 (instruccion -> pekenun_instr .)
    TUNTEPU         reduce using rule 4 (instruccion -> pekenun_instr .)
    LI              reduce using rule 4 (instruccion -> pekenun_instr .)
    $end            reduce using rule 4 (instruccion -> pekenun_instr .)
    LLAVDER         reduce using rule 4 (instruccion -> pekenun_instr .)


state 5

    (5) instruccion -> asignacion_instr .

    PEKENUN         reduce using rule 5 (instruccion -> asignacion_instr .)
    ID              reduce using rule 5 (instruccion -> asignacion_instr .)
    TUNTEPU         reduce using rule 5 (instruccion -> asignacion_instr .)
    LI              reduce using rule 5 (instruccion -> asignacion_instr .)
    $end            reduce using rule 5 (instruccion -> asignacion_instr .)
    LLAVDER         reduce using rule 5 (instruccion -> asignacion_instr .)


state 6

    (6) instruccion -> tuntepu_instr .

    PEKENUN         reduce using rule 6 (instruccion -> tuntepu_instr .)
    ID              reduce using rule 6 (instruccion -> tuntepu_instr .)
    TUNTEPU         reduce using rule 6 (instruccion -> tuntepu_instr .)
    LI              reduce using rule 6 (instruccion -> tuntepu_instr .)
    $end            reduce using rule 6 (instruccion -> tuntepu_instr .)
    LLAVDER         reduce using rule 6 (instruccion -> tuntepu_instr .)


state 7

    (7) instruccion -> li_instr .

    PEKENUN         reduce using rule 7 (instruccion -> li_instr .)
    ID              reduce using rule 7 (instruccion -> li_instr .)
    TUNTEPU         reduce using rule 7 (instruccion -> li_instr .)
    LI              reduce using rule 7 (instruccion -> li_instr .)
    $end            reduce using rule 7 (instruccion -> li_instr .)
    LLAVDER         reduce using rule 7 (instruccion -> li_instr .)


state 8

    (8) instruccion -> if_else_instr .

    PEKENUN         reduce using rule 8 (instruccion -> if_else_instr .)
    ID              reduce using rule 8 (instruccion -> if_else_instr .)
    TUNTEPU         reduce using rule 8 (instruccion -> if_else_instr .)
    LI              reduce using rule 8 (instruccion -> if_else_instr .)
    $end            reduce using rule 8 (instruccion -> if_else_instr .)
    LLAVDER         reduce using rule 8 (instruccion -> if_else_instr .)


state 9

    (9) pekenun_instr -> PEKENUN . PAREIZQ expresion_cadena PAREDER

    PAREIZQ         shift and go to state 14


state 10

    (10) asignacion_instr -> ID . ASIGNACION expresion_numerica

    ASIGNACION      shift and go to state 15


state 11

    (11) tuntepu_instr -> TUNTEPU . PAREIZQ expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER

    PAREIZQ         shift and go to state 16


state 12

    (12) li_instr -> LI . PAREIZQ expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER
    (13) if_else_instr -> LI . PAREIZQ expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER NVLI LLAVIZQ instrucciones LLAVDER

    PAREIZQ         shift and go to state 17


state 13

    (2) instrucciones -> instrucciones instruccion .

    PEKENUN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    TUNTEPU         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LI              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVDER         reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 14

    (9) pekenun_instr -> PEKENUN PAREIZQ . expresion_cadena PAREDER
    (22) expresion_cadena -> . CADENA
    (23) expresion_cadena -> . expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    CADENA          shift and go to state 20
    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_cadena               shift and go to state 19
    expresion_numerica             shift and go to state 21

state 15

    (10) asignacion_instr -> ID ASIGNACION . expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_numerica             shift and go to state 25

state 16

    (11) tuntepu_instr -> TUNTEPU PAREIZQ . expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER
    (24) expresion_logica -> . expresion_numerica MAYOR expresion_numerica
    (25) expresion_logica -> . expresion_numerica MENOR expresion_numerica
    (26) expresion_logica -> . expresion_numerica IGUALQUE expresion_numerica
    (27) expresion_logica -> . expresion_numerica DISTINTO expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_logica               shift and go to state 26
    expresion_numerica             shift and go to state 27

state 17

    (12) li_instr -> LI PAREIZQ . expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER
    (13) if_else_instr -> LI PAREIZQ . expresion_logica PAREDER LLAVIZQ instrucciones LLAVDER NVLI LLAVIZQ instrucciones LLAVDER
    (24) expresion_logica -> . expresion_numerica MAYOR expresion_numerica
    (25) expresion_logica -> . expresion_numerica MENOR expresion_numerica
    (26) expresion_logica -> . expresion_numerica IGUALQUE expresion_numerica
    (27) expresion_logica -> . expresion_numerica DISTINTO expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_logica               shift and go to state 28
    expresion_numerica             shift and go to state 27

state 18

    (18) expresion_numerica -> PAREIZQ . expresion_numerica PAREDER
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_numerica             shift and go to state 29

state 19

    (9) pekenun_instr -> PEKENUN PAREIZQ expresion_cadena . PAREDER

    PAREDER         shift and go to state 30


state 20

    (22) expresion_cadena -> CADENA .

    PAREDER         reduce using rule 22 (expresion_cadena -> CADENA .)


state 21

    (23) expresion_cadena -> expresion_numerica .
    (14) expresion_numerica -> expresion_numerica . MAS expresion_numerica
    (15) expresion_numerica -> expresion_numerica . MENOS expresion_numerica
    (16) expresion_numerica -> expresion_numerica . POR expresion_numerica
    (17) expresion_numerica -> expresion_numerica . DIVIDIDO expresion_numerica

    PAREDER         reduce using rule 23 (expresion_cadena -> expresion_numerica .)
    MAS             shift and go to state 31
    MENOS           shift and go to state 32
    POR             shift and go to state 33
    DIVIDIDO        shift and go to state 34


state 22

    (19) expresion_numerica -> ENTERO .

    MAS             reduce using rule 19 (expresion_numerica -> ENTERO .)
    MENOS           reduce using rule 19 (expresion_numerica -> ENTERO .)
    POR             reduce using rule 19 (expresion_numerica -> ENTERO .)
    DIVIDIDO        reduce using rule 19 (expresion_numerica -> ENTERO .)
    PAREDER         reduce using rule 19 (expresion_numerica -> ENTERO .)
    PEKENUN         reduce using rule 19 (expresion_numerica -> ENTERO .)
    ID              reduce using rule 19 (expresion_numerica -> ENTERO .)
    TUNTEPU         reduce using rule 19 (expresion_numerica -> ENTERO .)
    LI              reduce using rule 19 (expresion_numerica -> ENTERO .)
    $end            reduce using rule 19 (expresion_numerica -> ENTERO .)
    LLAVDER         reduce using rule 19 (expresion_numerica -> ENTERO .)
    MAYOR           reduce using rule 19 (expresion_numerica -> ENTERO .)
    MENOR           reduce using rule 19 (expresion_numerica -> ENTERO .)
    IGUALQUE        reduce using rule 19 (expresion_numerica -> ENTERO .)
    DISTINTO        reduce using rule 19 (expresion_numerica -> ENTERO .)


state 23

    (20) expresion_numerica -> DECIMAL .

    MAS             reduce using rule 20 (expresion_numerica -> DECIMAL .)
    MENOS           reduce using rule 20 (expresion_numerica -> DECIMAL .)
    POR             reduce using rule 20 (expresion_numerica -> DECIMAL .)
    DIVIDIDO        reduce using rule 20 (expresion_numerica -> DECIMAL .)
    PAREDER         reduce using rule 20 (expresion_numerica -> DECIMAL .)
    PEKENUN         reduce using rule 20 (expresion_numerica -> DECIMAL .)
    ID              reduce using rule 20 (expresion_numerica -> DECIMAL .)
    TUNTEPU         reduce using rule 20 (expresion_numerica -> DECIMAL .)
    LI              reduce using rule 20 (expresion_numerica -> DECIMAL .)
    $end            reduce using rule 20 (expresion_numerica -> DECIMAL .)
    LLAVDER         reduce using rule 20 (expresion_numerica -> DECIMAL .)
    MAYOR           reduce using rule 20 (expresion_numerica -> DECIMAL .)
    MENOR           reduce using rule 20 (expresion_numerica -> DECIMAL .)
    IGUALQUE        reduce using rule 20 (expresion_numerica -> DECIMAL .)
    DISTINTO        reduce using rule 20 (expresion_numerica -> DECIMAL .)


state 24

    (21) expresion_numerica -> ID .

    MAS             reduce using rule 21 (expresion_numerica -> ID .)
    MENOS           reduce using rule 21 (expresion_numerica -> ID .)
    POR             reduce using rule 21 (expresion_numerica -> ID .)
    DIVIDIDO        reduce using rule 21 (expresion_numerica -> ID .)
    PAREDER         reduce using rule 21 (expresion_numerica -> ID .)
    PEKENUN         reduce using rule 21 (expresion_numerica -> ID .)
    ID              reduce using rule 21 (expresion_numerica -> ID .)
    TUNTEPU         reduce using rule 21 (expresion_numerica -> ID .)
    LI              reduce using rule 21 (expresion_numerica -> ID .)
    $end            reduce using rule 21 (expresion_numerica -> ID .)
    LLAVDER         reduce using rule 21 (expresion_numerica -> ID .)
    MAYOR           reduce using rule 21 (expresion_numerica -> ID .)
    MENOR           reduce using rule 21 (expresion_numerica -> ID .)
    IGUALQUE        reduce using rule 21 (expresion_numerica -> ID .)
    DISTINTO        reduce using rule 21 (expresion_numerica -> ID .)


state 25

    (10) asignacion_instr -> ID ASIGNACION expresion_numerica .
    (14) expresion_numerica -> expresion_numerica . MAS expresion_numerica
    (15) expresion_numerica -> expresion_numerica . MENOS expresion_numerica
    (16) expresion_numerica -> expresion_numerica . POR expresion_numerica
    (17) expresion_numerica -> expresion_numerica . DIVIDIDO expresion_numerica

    PEKENUN         reduce using rule 10 (asignacion_instr -> ID ASIGNACION expresion_numerica .)
    ID              reduce using rule 10 (asignacion_instr -> ID ASIGNACION expresion_numerica .)
    TUNTEPU         reduce using rule 10 (asignacion_instr -> ID ASIGNACION expresion_numerica .)
    LI              reduce using rule 10 (asignacion_instr -> ID ASIGNACION expresion_numerica .)
    $end            reduce using rule 10 (asignacion_instr -> ID ASIGNACION expresion_numerica .)
    LLAVDER         reduce using rule 10 (asignacion_instr -> ID ASIGNACION expresion_numerica .)
    MAS             shift and go to state 31
    MENOS           shift and go to state 32
    POR             shift and go to state 33
    DIVIDIDO        shift and go to state 34


state 26

    (11) tuntepu_instr -> TUNTEPU PAREIZQ expresion_logica . PAREDER LLAVIZQ instrucciones LLAVDER

    PAREDER         shift and go to state 35


state 27

    (24) expresion_logica -> expresion_numerica . MAYOR expresion_numerica
    (25) expresion_logica -> expresion_numerica . MENOR expresion_numerica
    (26) expresion_logica -> expresion_numerica . IGUALQUE expresion_numerica
    (27) expresion_logica -> expresion_numerica . DISTINTO expresion_numerica
    (14) expresion_numerica -> expresion_numerica . MAS expresion_numerica
    (15) expresion_numerica -> expresion_numerica . MENOS expresion_numerica
    (16) expresion_numerica -> expresion_numerica . POR expresion_numerica
    (17) expresion_numerica -> expresion_numerica . DIVIDIDO expresion_numerica

    MAYOR           shift and go to state 36
    MENOR           shift and go to state 37
    IGUALQUE        shift and go to state 38
    DISTINTO        shift and go to state 39
    MAS             shift and go to state 31
    MENOS           shift and go to state 32
    POR             shift and go to state 33
    DIVIDIDO        shift and go to state 34


state 28

    (12) li_instr -> LI PAREIZQ expresion_logica . PAREDER LLAVIZQ instrucciones LLAVDER
    (13) if_else_instr -> LI PAREIZQ expresion_logica . PAREDER LLAVIZQ instrucciones LLAVDER NVLI LLAVIZQ instrucciones LLAVDER

    PAREDER         shift and go to state 40


state 29

    (18) expresion_numerica -> PAREIZQ expresion_numerica . PAREDER
    (14) expresion_numerica -> expresion_numerica . MAS expresion_numerica
    (15) expresion_numerica -> expresion_numerica . MENOS expresion_numerica
    (16) expresion_numerica -> expresion_numerica . POR expresion_numerica
    (17) expresion_numerica -> expresion_numerica . DIVIDIDO expresion_numerica

    PAREDER         shift and go to state 41
    MAS             shift and go to state 31
    MENOS           shift and go to state 32
    POR             shift and go to state 33
    DIVIDIDO        shift and go to state 34


state 30

    (9) pekenun_instr -> PEKENUN PAREIZQ expresion_cadena PAREDER .

    PEKENUN         reduce using rule 9 (pekenun_instr -> PEKENUN PAREIZQ expresion_cadena PAREDER .)
    ID              reduce using rule 9 (pekenun_instr -> PEKENUN PAREIZQ expresion_cadena PAREDER .)
    TUNTEPU         reduce using rule 9 (pekenun_instr -> PEKENUN PAREIZQ expresion_cadena PAREDER .)
    LI              reduce using rule 9 (pekenun_instr -> PEKENUN PAREIZQ expresion_cadena PAREDER .)
    $end            reduce using rule 9 (pekenun_instr -> PEKENUN PAREIZQ expresion_cadena PAREDER .)
    LLAVDER         reduce using rule 9 (pekenun_instr -> PEKENUN PAREIZQ expresion_cadena PAREDER .)


state 31

    (14) expresion_numerica -> expresion_numerica MAS . expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_numerica             shift and go to state 42

state 32

    (15) expresion_numerica -> expresion_numerica MENOS . expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_numerica             shift and go to state 43

state 33

    (16) expresion_numerica -> expresion_numerica POR . expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_numerica             shift and go to state 44

state 34

    (17) expresion_numerica -> expresion_numerica DIVIDIDO . expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_numerica             shift and go to state 45

state 35

    (11) tuntepu_instr -> TUNTEPU PAREIZQ expresion_logica PAREDER . LLAVIZQ instrucciones LLAVDER

    LLAVIZQ         shift and go to state 46


state 36

    (24) expresion_logica -> expresion_numerica MAYOR . expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_numerica             shift and go to state 47

state 37

    (25) expresion_logica -> expresion_numerica MENOR . expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_numerica             shift and go to state 48

state 38

    (26) expresion_logica -> expresion_numerica IGUALQUE . expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_numerica             shift and go to state 49

state 39

    (27) expresion_logica -> expresion_numerica DISTINTO . expresion_numerica
    (14) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (15) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (16) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (17) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (18) expresion_numerica -> . PAREIZQ expresion_numerica PAREDER
    (19) expresion_numerica -> . ENTERO
    (20) expresion_numerica -> . DECIMAL
    (21) expresion_numerica -> . ID

    PAREIZQ         shift and go to state 18
    ENTERO          shift and go to state 22
    DECIMAL         shift and go to state 23
    ID              shift and go to state 24

    expresion_numerica             shift and go to state 50

state 40

    (12) li_instr -> LI PAREIZQ expresion_logica PAREDER . LLAVIZQ instrucciones LLAVDER
    (13) if_else_instr -> LI PAREIZQ expresion_logica PAREDER . LLAVIZQ instrucciones LLAVDER NVLI LLAVIZQ instrucciones LLAVDER

    LLAVIZQ         shift and go to state 51


state 41

    (18) expresion_numerica -> PAREIZQ expresion_numerica PAREDER .

    MAS             reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    MENOS           reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    POR             reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    DIVIDIDO        reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    PAREDER         reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    PEKENUN         reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    ID              reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    TUNTEPU         reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    LI              reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    $end            reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    LLAVDER         reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    MAYOR           reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    MENOR           reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    IGUALQUE        reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)
    DISTINTO        reduce using rule 18 (expresion_numerica -> PAREIZQ expresion_numerica PAREDER .)


state 42

    (14) expresion_numerica -> expresion_numerica MAS expresion_numerica .
    (14) expresion_numerica -> expresion_numerica . MAS expresion_numerica
    (15) expresion_numerica -> expresion_numerica . MENOS expresion_numerica
    (16) expresion_numerica -> expresion_numerica . POR expresion_numerica
    (17) expresion_numerica -> expresion_numerica . DIVIDIDO expresion_numerica
